# avathon

./: DECISION_RATIONALE.md  README.md
resource-allocation-engine/: .gitignore  ALGORITHMS.md  ALGORITHMS_OVERVIEW.md  README.md  SYSTEM_DESIGN.md  UI_GUIDE.md
resource-allocation-engine/backend/: pyproject.toml  requirements.txt
resource-allocation-engine/backend/app/: cost.py  engine.py  explain.py  generators.py  main.py  metrics.py  models.py  store.py
resource-allocation-engine/backend/app/strategies/: __init__.py  base.py  greedy.py  hungarian.py  min_cost_flow.py
resource-allocation-engine/backend/benchmarks/: run_benchmarks.py
resource-allocation-engine/backend/tests/: test_api.py  test_cost.py  test_hybrid.py  test_strategies.py
resource-allocation-engine/frontend/: index.html  package-lock.json  package.json  vite.config.ts
resource-allocation-engine/frontend/src/: App.tsx
resource-allocation-engine/frontend/src/api/: client.ts
resource-allocation-engine/frontend/src/components/: AlgoStats.tsx  AlgorithmPage.tsx  ComparePage.tsx  ComparisonGrid.tsx  ControlPanel.tsx  ExplanationDrawer.tsx  HybridLab.tsx  MapView.tsx  MetricsDashboard.tsx  SimulatorPage.tsx
resource-allocation-engine/frontend/src/styles/: theme.css
resource-allocation-engine/frontend/src/types/: index.ts
