[project]
name = "resource-allocation-engine"
version = "1.0.0"
description = "Delivery-fleet resource allocation engine with comparable Greedy / Hungarian / Min-Cost-Flow / Auction strategies."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "numpy>=1.26",
    "scipy>=1.11",
    "ortools>=9.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "hypothesis>=6.100", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.strategies"]
